# speakwiseai-project

./: .dockerignore  .editorconfig  .env.example  .flake8  .git-cliff.toml  .gitignore  .gitlab-ci.yml  .gitleaks.toml  .pre-commit-config.yaml  .pre-commit-config.yml  .semgrep.yml  AGENTS.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  SECURITY.md  USER_MANUAL.md  app.py  pre-commit-config.yaml  pyproject.toml  requirements-dev.txt  requirements.txt
.specify/: constitution.md
.specify/memory/: constitution.md
.specify/templates/: feature-spec.md  plan-template.md  spec-template.md  tasks-template.md
SpeakWiseAI/: app.py
SpeakWiseAI/pages/: Progress.py
SpeakWiseAI/utils/: __init__.py  ai_provider.py  analysis.py  scoring.py  transcribe.py
data/: history.csv
pages/: Progress.py
specs/: speech-analysis.md
specs/001-speech-analysis/: spec.md
tests/: test_analysis.py  test_scoring.py
utils/: __init__.py  ai_provider.py  analysis.py  scoring.py  transcribe.py
